# GPU-SURF-

./: README
OpenSURFcpp/: OpenSURF2005.sln  OpenSURF2005.vcproj  OpenSURF2008.sln  OpenSURF2008.vcproj
OpenSURFcpp/src/: main.cpp  surflib.h
SURFGPU-1.1.2/: CMakeLists.txt  Doxyfile  README  integral.cpp  integral.h  main.cpp  surf.cpp  surf.h  surflib.h  utils.cpp  utils.h
SURFGPU-1.1.2/CMake/cuda/: FindCUDA.cmake
SURFGPU-1.1.2/cuda/: buildDetGPU.cu  buildSURFDescriptorsCUDA.cu  strerror_cudpp.cpp
SURFGPU-1.2.0/: CMakeLists.txt  fasthessian.cpp  fasthessian.h  getMatchesCPU.cpp  integral.cpp  ipoint.cpp  ipoint.h  kmeans.h  main.cpp  main_kinect.cpp  surflib.h
SURFGPU-1.2.0/CMake/: FindCUDPP.cmake  FindOpenCV.cmake
SURFGPU-1.2.0/cuda/: buildDetCUDA.cu  detectIpointOrientationsCUDA.cu  getMatchesGPU.cpp  haarXY.cu  nonMaxCUDA.cu  nonMaxGPU.cu  normalizeSURFDescriptorsCUDA.cu
cudpp_src_2.0/apps/cudpp_testrig/: CMakeLists.txt  cudpp_testrig.cpp  cudpp_testrig_options.cpp
cudpp_src_2.0/apps/data/: readme.txt
cudpp_src_2.0/doc/: changelog.txt
cudpp_src_2.0/include/: cudpp.h
cudpp_src_2.0/src/cudpp/: CMakeLists.txt  cudpp.cpp  cudpp_plan.cpp  cudpp_plan.h  cudpp_reduce.h  cudpp_util.h
cudpp_src_2.0/src/cudpp/app/: reduce_app.cu
